# reversi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Logger.cpp  Logger.h  README.md  Shader.cpp  Shader.h  helper.cpp  input.h  logger.cpp  logger.h  main.cpp  main.h  shader.cpp  shader.h  state.h  ui.cpp  ui.h
glad/src/: glad.c
include/glad/: CMakeLists.txt
include/glad/include/glad/: glad.h
shaders/: cell.frag  circle.frag  circle.vert  disk.frag  eval.frag  grid.frag  grid.vert
src/: ai.cpp  ai.h  helper.cpp  helper.h  input.cpp  input.h  logger.cpp  logger.h  main.cpp  main.h  reversi.cpp  reversi.h  shader.cpp  shader.h  shaders.h  state.cpp  state.h  ui.cpp  ui.h
src/game/: ai.cpp  ai.h  board.cpp  board.h  input.cpp  input.h  reversi.cpp  reversi.h  search.cpp  search.h
src/game/fastboard/: edges.cpp  edges.h  fastboard.cpp  fastboard.h  flip.cpp  flip.h  moves.cpp  moves.h
src/online/: client.cpp  client.h  handler.cpp  handler.h  reversi.pb.cc  reversi.pb.h  reversi.proto
src/ui/: game.cpp  game.h  helper.cpp  helper.h  shader.cpp  shader.h  shaders.cpp  shaders.h  ui.cpp  ui.h
src/ui/tabs/: ai.cpp  ai.h  debug.cpp  debug.h  game.cpp  game.h  local.cpp  local.h  online.cpp  online.h  theme.cpp  theme.h
